<resources>
    <string name="app_name">GpsTracker</string>
    <!--bottom_menu-->
    <string name="home">Главная</string>
    <string name="tracks">Маршруты</string>
    <string name="settings">Настройки</string>
    <!--main_preference-->
    <string name="update_time">Обновить время</string>
    <string name="update_time_summary">Обновление времени местоположения</string>
    <string name="location">Местоположение</string>
    <string name="track_color">Цвет маршрута</string>
    <string name="track_color_summary">Выбор цвета маршрута</string>
    <!--Main Fragment-->
    <string name="toast_need_perm">"Пожалуйста, разрешите использование вашего местоположения!"</string>
    <string name="toast_gps_disabled">"GPS выключен. Пожалуйста, включите его на своем устройстве"</string>
    <string name="time_tv">Время:</string>
    <string name="date_tv">Дата:</string>
    <string name="distance_tv">Дистанция:</string>
    <string name="speed_tv">Скорость:</string>
    <string name="speed_average_tv">Средняя скорость:</string>
    <string name="meter_tv">м</string>
    <string name="speed_tv_in_meter">м/с</string>
    <!--Dialog Manager-->
    <string name="location_disabled">Ваша геолокация отключена</string>
    <string name="location_disabled_message">Хотите включить GPS?</string>
    <string name="yes">Да</string>
    <string name="no">Отмена</string>
    <string name="minutes"> минут</string>
    <string name="meter_in_sec"> м/с</string>
    <string name="distance_in_kilometer"> км</string>
    <!--save_dialog-->
    <string name="save_this_track">Сохранить этот маршрут?</string>
    <string name="button_save">Сохранить</string>
    <string name="button_cancel">Отменить</string>
    <string name="tv_time_dialog">Время: </string>
    <string name="tv_speed_dialog">Скорость:</string>
    <string name="tv_distance_dialog">Дистанция:</string>
    <!--fragment_tracks-->
    <string name="empty">Пусто</string>
    <!--Track Fragment-->
    <string name="toast_track_deleted">Маршрут удалён</string>
    <!--fragment_view_track-->
    <string name="fvt_date">Дата:</string>
</resources>